Added in javascript functions to get responsive data from the API for the forecast. Also updated the Netlify link

--- a/index.html
+++ b/index.html
@@ -68,9 +68,7 @@
           >GitHub</a
         >
         and hosted on
-        <a href="https://tempestasweather-app.netlify.app/" target="_blank"
-          >Netlify</a
-        >
+        <a href="https://elementis.netlify.app" target="_blank">Netlify</a>
       </footer>
     </div>
     <script src="src/index.js"></script>
