--- a/index.html
+++ b/index.html
@@ -60,8 +60,8 @@
 
       <footer>
         Coded by
-        <a href="https://github.com/IggyTown" target="_blank">Izzy Townsend</a>,
-        open-sourced on
+        <a href="https://github.com/IggyTown" target="_blank">Isabel Townsend</a
+        >, open-sourced on
         <a
           href="https://github.com/IggyTown/tempestas/blob/main/index.html"
           target="_blank"
